# cad-query-workspace

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  run_lint.sh
.github/workflows/: ci.yml
docs/: README.md
docs/cadquery/: apireference.md  assy.md  citing.md  classreference.md  cqgi.md  designprinciples.md  extending.md  fileformat.md  importexport.md  index.md  installation.md  intro.md  primer.md  quickstart.md  roadmap.md  selectors.md  sketch.md  vis.md  workplane.md
examples/: box.py  coffee_mug.py  donut.py
mcp/: README.md  evaluate_verify.py  evaluation_results.json  render_views.py  requirements.txt  server.py  test_expected_results.json
mcp/test_models/: bracket.py  broken_model.py  coffee_mug.py  gear.py  hexagonal_nut.py  missing_show_object.py  pyramid.py  spiral_vase.py
outputs/: box.stl  donut.stl
src/ai_3d_print/: __init__.py  main.py  render_views.py  view_direction.py
tests/: __init__.py  test_main.py
